--- a/style.css
+++ b/style.css
@@ -279,3 +279,15 @@ body {
     font-family: "Mortal Kombat 3";
 }
 
+.reloadWrap {
+    position: absolute;
+    top: 10%;
+    z-index: 1000;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.reloadWrap .button,
+.reloadWrap .button-restart {
+    margin-top: 0;
+}
