--- a/style.css
+++ b/style.css
@@ -41,32 +41,34 @@ body {
 .wall-left {
     position: absolute;
     width: 87px;
-    background: url(assets/wall-left.png);
-    height: 100vh;
+    background-image: url(assets/wall-left.png);
+    min-height: 100vh;
     background-size: contain;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     top: 0;
     z-index: 100;
     left: 50%;
     transform: translate(-450px, 0px);
+    height: 100%;
 }
 
 .wall-right {
     position: absolute;
     width: 87px;
-    background: url(./assets/wall-right.png);
-    height: 100vh;
+    background-image: url(./assets/wall-right.png);
+    min-height: 100vh;
     background-size: contain;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     top: 0;
     z-index: 100;
     right: 50%;
     transform: translate(450px, 0px);
+    height: 100%;
 }
 
 .arenas {
     width: 786px;
-    height: 70vh;
+    height: 578px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -145,7 +147,7 @@ body {
 .life {
     background-color: #0431f9;
     height: 100%;
-    width: 100%;
+    width: 90%;
 }
 
 .name {
@@ -170,10 +172,14 @@ body {
 .chat {
     width: 786px;
     height: 30vh;
-    background: url(./assets/versus.png);
+    background-image: url(./assets/versus.png);
     background-size: cover;
     background-position: center;
     border-top: 4px solid #f5d100;
+    padding: 6px 40px;
+    overflow: scroll;
+    color: white;
+    font-family: Arial;
 }
 
 .character {
@@ -192,34 +198,28 @@ body {
 }
 
 .player2 .character img {
-    transform: scaleX(-1);
+    transform: scaleX(-1) translate(50%, 0);
 }
 
 .character img {
     height: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .fight {
     position: absolute;
     z-index: 100;
-    top: 20%;
+    top: 30%;
     width: 300px;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
 
 .fight img {
     width: 100%;
-}
-
-.control {
-    position: absolute;
-    width: 200px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
 }
 
 .button {
@@ -232,7 +232,7 @@ body {
     text-transform: uppercase;
     background-color: #f5d100;
     border: none;
-    margin-top: 150px;
+    margin-top: 0;
     margin-left: auto;
     margin-right: auto;
     border-radius: 4px;
@@ -241,7 +241,6 @@ body {
     font-family: "Mortal Kombat 3";
     outline: none;
 }
-
 .button::after {
     content: "";
     position: absolute;
@@ -253,23 +252,37 @@ body {
     border-radius: 4px;
     z-index: -1;
 }
-
 .button:hover {
     background-color: #f5d100;
 }
-
 .button:active {
     top: 2px;
 }
-
 .button:active::after {
     top: 1px;
 }
 
-.winTitle,
-.loseTitle {
+.button:disabled {
+    opacity: .9;
+    cursor: not-allowed;
+}
+
+.button:disabled:after {
+    opacity: .1;
+}
+
+.button:disabled:active {
+    top: 0px;
+}
+
+.button:disabled:active::after {
+    top: 4px;
+}
+
+.loseTitle,
+.winTitle {
     position: absolute;
-    top: 25%;
+    top: 22%;
     left: 50%;
     font-size: 36px;
     transform: translate(-50%, 0%);
@@ -277,18 +290,18 @@ body {
     z-index: 1000;
     color: white;
     font-family: "Mortal Kombat 3";
+    text-shadow: 2px 2px 2px #cd0e03;
 }
 
 .reloadWrap {
     position: absolute;
-    top: 10%;
+    top: 54px;
     z-index: 1000;
     left: 50%;
     transform: translate(-50%, 0%);
 }
 
-.reloadWrap .button,
-.reloadWrap .button-restart {
+.reloadWrap .button {
     margin-top: 0;
 }
 
@@ -325,10 +338,11 @@ form:invalid button[class=button]:active::after {
 .inputWrap {
     position: relative;
     width: 280px;
+    margin-bottom: 24px;
 }
 
 .buttonWrap {
-    margin-top: 36px;
+    margin-top: 12px;
 }
 
 .inputWrap h2 {
@@ -340,7 +354,7 @@ form:invalid button[class=button]:active::after {
     text-transform: uppercase;
 }
 
-.inputWrap div {
+.ul {
     border: solid 3px #cd0e03;
     height: 50px;
     padding: 0 12px;
@@ -349,13 +363,13 @@ form:invalid button[class=button]:active::after {
     justify-content: space-between;
     color: #efefef;
 }
-.inputWrap div label {
+.ul label {
     cursor: pointer;
 }
-.inputWrap div label:nth-of-type(2) {
+.ul label:nth-of-type(2) {
     margin: 0 -4.5px;
 }
-.inputWrap div  label h3{
+.ul label span {
     position: relative;
     display: inline-block;
     width: 80px;
@@ -365,7 +379,7 @@ form:invalid button[class=button]:active::after {
     text-align: center;
     margin-top: -3px;
 }
-.inputWrap div label h3::before {
+.ul label span::before {
     position: relative;
     display: block;
     width: 80px;
@@ -376,19 +390,22 @@ form:invalid button[class=button]:active::after {
     margin-bottom: -50px;
     transition: 0.3s;
 }
-.inputWrap div label h3:hover {
+.ul label span:hover {
     background-color: rgba(107, 185, 240, 0.2);
 }
 
 input {
     display: none;
 }
-input[type=radio]:checked + label > h3 {
+input[type=radio]:checked + label > span {
     color: #fff;
     font-weight: 700;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
-input[type=radio]:checked + label > h3::before {
+input[type=radio]:checked + label > span::before {
     background: #f5d100;
     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.2);
+}
+input[type=radio]:checked + label > span:hover {
+    background: none;
 }
